# Fenrir

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  run.py
core/: dynamics.py  engine.py  entities.py  guidance.py  telemetry.py
docs/: PHYSICS.md
presets/: pn_intercept.yaml
services/: analytics.py  scenarios.py
tests/: conftest.py  test_engine.py
ui/: streamlit_app.py
