[tool.poetry]
name = "fenrir"
version = "0.1.0"
description = "Flight & Engagement Kinematics with Real-time Interactive Rendering"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "core" },
    { include = "services" },
    { include = "ui" }
]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.0"
scipy = "^1.11.0"
matplotlib = "^3.8.0"
pandas = "^2.2.0"
streamlit = "^1.37.0"
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "ANN", "N", "B", "SIM"]
ignore = ["ANN101","ANN102"]  # allow missing self/cls annotations
fix = true

[tool.ruff.per-file-ignores]
"ui/*" = ["I001"]  # streamlit often reorders imports on reload

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true
